663
Fixed in r17241.
{code}
scala> <foo bar="&"/>
<console>:1: error: in XML literal: error parsing attribute value
       <foo bar="&"/>
                  ^
{code}
